--- a/src/app/colombia/contactenos/contactenos.component.html
+++ b/src/app/colombia/contactenos/contactenos.component.html
@@ -12,23 +12,23 @@
                         <h3 class="size19 text-blue2 font-weight-700 text-center pb-1">Contáctanos</h3>
                         <form class="contactenos pb-4">
                             <div class="form-row pt-2 pb-2">
-                                <label class="size14 letter-spacing0-4 line-height17 text-gray-dark font-weight-500" for="nombre">Nombre completo</label>
+                                <label class="size14 letter-spacing0-4 line-height17 text-gray-dark font-weight-400 text-uppercase" for="nombre">Nombre completo</label>
                                 <input type="text" class="form-control" id="nombre" required>
                             </div>
                             <div class="form-row pt-2 pb-2">
-                                <label class="size14 letter-spacing0-4 line-height17 text-gray-dark font-weight-500" for="telefono">Teléfono</label>
+                                <label class="size14 letter-spacing0-4 line-height17 text-gray-dark font-weight-400 text-uppercase" for="telefono">Teléfono</label>
                                 <input type="tel" class="form-control" id="telefono" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
                             </div>
                             <div class="form-row pt-2 pb-2">
-                                <label class="size14 letter-spacing0-4 line-height17 text-gray-dark font-weight-500" for="ciudad">Ciudad</label>
+                                <label class="size14 letter-spacing0-4 line-height17 text-gray-dark font-weight-400 text-uppercase" for="ciudad">Ciudad</label>
                                 <input type="text" class="form-control" id="ciudad" required>
                             </div>
                             <div class="form-row pt-2 pb-2">
-                                <label class="size14 letter-spacing0-4 line-height17 text-gray-dark font-weight-500" for="empresa">Empresa</label>
+                                <label class="size14 letter-spacing0-4 line-height17 text-gray-dark font-weight-400 text-uppercase" for="empresa">Empresa</label>
                                 <input type="text" class="form-control" id="empresa" required>
                             </div>
                             <div class="form-row pt-2 pb-2">
-                                <label class="size14 letter-spacing0-4 line-height17 text-gray-dark font-weight-500" for="asunto">Asunto</label>
+                                <label class="size14 letter-spacing0-4 line-height17 text-gray-dark font-weight-400 text-uppercase" for="asunto">Asunto</label>
                                 <textarea class="form-control" id="asunto"></textarea>
                             </div>
                               <div class="form-check">
