--- a/src/app/menu-vertical/menu-vertical.component.html
+++ b/src/app/menu-vertical/menu-vertical.component.html
@@ -50,7 +50,7 @@
                         <li><a class="itemMenuDescubreVertical" href="#">Planeación de proyectos</a></li>
                     </ul>-->
                 </li>
-                <li><a class="itemMenuDescubrePadre" href="#">Publicaciones</a></li>
+                <li><a class="itemMenuDescubrePadre" [routerLink]="['publicaciones']">Publicaciones</a></li>
             </ul>
         </div>
         <div class="corporacionVertical">
@@ -76,7 +76,7 @@
         </div>
     </div>
     <div class="footerVertical">
-        <a class="botonContactenosVertical" href="#">Contáctenos</a>
+        <a class="botonContactenosVertical" [routerLink]="['contactenos']">Contáctenos</a>
         <a class="botonInicioSesion" href="#">Iniciar Sesión/Registrarse</a>
     </div>
 </div>
