Cambios que no se habían guardado. Versión vieja sin conexión con wordpress

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-menu-vertical></app-menu-vertical>
+<app-enviar-hoja></app-enviar-hoja>
 <app-topbar-azul></app-topbar-azul>
 <app-menu-principal></app-menu-principal>
 
