--- a/src/app/colombia/nosotros/politica-gestion-integral/politica-gestion-integral.component.html
+++ b/src/app/colombia/nosotros/politica-gestion-integral/politica-gestion-integral.component.html
@@ -1,6 +1,6 @@
 <div class="politica-gestion">
     <div class="container">
-        <div class="row pb-5" style="background-image: url(assets/images/nosotros/points.png);background-repeat: no-repeat;background-position: top right;">
+        <div class="row bg-none pb-5"style="background-image: url(assets/images/nosotros/points.png);background-repeat: no-repeat;background-position: top right;">
             <div class="col-sm-6 pt-5">
                 <h4 class="mb-4 text-blue1 font-weight-bold size22">Política de<br>gestión integral</h4>
                 <p>GERS,empresa de consultoría en ingeniería que presta servicios de diseño, estudios, pruebas y puesta en servicio de sistemas eléctricos, comercialización de equipos y software especializados, se compromete a realizar sus actividades cumpliendo la legislación nacional, la internacional y los requisitos suscritos aplicables a sus proyectos.<br>
