--- a/src/app/colombia/proyectos/proyectos.component.html
+++ b/src/app/colombia/proyectos/proyectos.component.html
@@ -1,4 +1,4 @@
-<section class="seccionColombia9 mt-5 mb-5">
+<section class="seccionColombia9 pagina-proyectos mt-5 mb-5">
     <div class="container">
         <div class="row mb-4">
             <div class="col-md-12 mt-2">
