--- a/src/app/colombia/publicaciones/publicaciones.component.html
+++ b/src/app/colombia/publicaciones/publicaciones.component.html
@@ -3,10 +3,10 @@
         <div class="row mt-5 mb-5">
             <div class="col-sm-12 col-md-4">
                 <div class="card-publication">
-                    <a href="#">
+                    <a href="/#/publicacion-interna">                       
                         <div class="p-3">
                             <h3 class="roboto size24 text-black">Lorem ipsum dolor sit amet, <br>consectetur adipiscing elit.</h3>
-                            <h4 class="mt-4 mb-4 text-uppercase text-black size12 roboto">Carrie Crawford   |   2 mints ago</h4>
+                            <h4 class="mt-4 mb-4 text-uppercase text-black size12 roboto font-weight-bold">Carrie Crawford   |   2 mints ago</h4>
                         </div>
                         <img class="img-fluid w-100" src="assets/images/publicaciones/publicacion1.png" alt="Publicaciones">
                     </a>
@@ -18,7 +18,7 @@
                         <img class="img-fluid w-100" src="assets/images/publicaciones/publicacion2.png" alt="Publicaciones">
                         <div class="p-3">
                             <h3 class="mt-4 mb-4 roboto size24 text-black">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In luctus nibh a massa tempor dictum</h3>
-                            <h4 class="text-uppercase text-black size12 roboto">Flora Morris   |   6 mints ago</h4>
+                            <h4 class="text-uppercase text-black size12 roboto font-weight-bold">Flora Morris   |   6 mints ago</h4>
                         </div>
                     </a>
                 </div>
@@ -31,7 +31,7 @@
                         <img class="img-fluid w-100" src="assets/images/publicaciones/publicacion3.png" alt="Publicaciones">
                         <div class="p-3">
                             <h3 class="mt-4 mb-4 roboto size24 text-black">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In luctus nibh a massa tempor dictum</h3>
-                            <h4 class="text-uppercase text-black size12 roboto">Flora Morris   |   6 mints ago</h4>
+                            <h4 class="text-uppercase text-black size12 roboto font-weight-bold">Flora Morris   |   6 mints ago</h4>
                         </div>
                     </a>
                 </div>
@@ -41,7 +41,7 @@
                     <a href="#">
                         <div class="p-3">
                             <h3 class="roboto size24 text-black">Lorem ipsum dolor sit amet, <br>consectetur adipiscing elit.</h3>
-                            <h4 class="mt-4 mb-4 text-uppercase text-black size12 roboto">Carrie Crawford   |   2 mints ago</h4>
+                            <h4 class="mt-4 mb-4 text-uppercase text-black size12 roboto font-weight-bold">Carrie Crawford   |   2 mints ago</h4>
                         </div>
                         <img class="img-fluid w-100" src="assets/images/publicaciones/publicacion4.png" alt="Publicaciones">
                     </a>
@@ -54,7 +54,7 @@
                     <a href="#">
                         <div class="p-3">
                             <h3 class="roboto size24 text-black">Lorem ipsum dolor sit amet, <br>consectetur adipiscing elit.</h3>
-                            <h4 class="mt-4 mb-4 text-uppercase text-black size12 roboto">Carrie Crawford   |   2 mints ago</h4>
+                            <h4 class="mt-4 mb-4 text-uppercase text-black size12 roboto font-weight-bold">Carrie Crawford   |   2 mints ago</h4>
                         </div>
                         <img class="img-fluid w-100" src="assets/images/publicaciones/publicacion1.png" alt="Publicaciones">
                     </a>
@@ -66,7 +66,7 @@
                         <img class="img-fluid w-100" src="assets/images/publicaciones/publicacion2.png" alt="Publicaciones">
                         <div class="p-3">
                             <h3 class="mt-4 mb-4 roboto size24 text-black">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In luctus nibh a massa tempor dictum</h3>
-                            <h4 class="text-uppercase text-black size12 roboto">Flora Morris   |   6 mints ago</h4>
+                            <h4 class="text-uppercase text-black size12 roboto font-weight-bold">Flora Morris   |   6 mints ago</h4>
                         </div>
                     </a>
                 </div>
