--- a/src/app/colombia/representaciones/xgslab/xgslab.component.html
+++ b/src/app/colombia/representaciones/xgslab/xgslab.component.html
@@ -24,7 +24,7 @@
                     </div>
                 </div>
                 <div class="row mt-4">
-                    <div class="col-sm-4 d-flex align-items-stretch">
+                    <div class="col-sm-4 mt-3 mb-3 d-flex align-items-stretch">
                         <div class="card box-shadow">
                             <div class="card-body">
                                 <h5 class="card-title text-blue1 font-weight-bold">GSA</h5>
@@ -34,7 +34,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-4 d-flex align-items-stretch">
+                    <div class="col-sm-4 mt-3 mb-3 d-flex align-items-stretch">
                         <div class="card box-shadow">
                             <div class="card-body">
                                 <h5 class="card-title text-blue1 font-weight-bold">GSA_FD</h5>
@@ -44,7 +44,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-4 d-flex align-items-stretch">
+                    <div class="col-sm-4 mt-3 mb-3 d-flex align-items-stretch">
                         <div class="card box-shadow">
                             <div class="card-body">
                                 <h5 class="card-title text-blue1 font-weight-bold">XGSA_FD</h5>
