--- a/src/app/colombia/servicios/estudios-sistemas/estudios-sistemas.component.html
+++ b/src/app/colombia/servicios/estudios-sistemas/estudios-sistemas.component.html
@@ -1,43 +1,45 @@
 <section class="servicios">
     <div class="estudios-sistemas">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-sm-7 mt-3 pl-100">
-                    <div class="row justify-content-center align-items-center">
-                        <div class="col-sm-8">
-                            <div class="media">
-                                <img class="align-self-center mr-3 img-fluid" src="assets/images/servicios/estudiosPNG.png" alt="Estudios sistemas">
-                                <div class="media-body">
-                                    <h4 class="mb-0 text-blue1 font-weight-bold">Estudios de<br>sistemas eléctricos</h4>
+        <div class="img-back-estudios-sistemas">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-7 mt-3">
+                        <div class="row justify-content-center align-items-center">
+                            <div class="col-sm-7">
+                                <div class="media">
+                                    <img class="align-self-center mr-3 img-fluid" src="assets/images/servicios/estudiosPNG.png" alt="Estudios sistemas">
+                                    <div class="media-body">
+                                        <h4 class="mb-0 text-blue1 font-weight-bold">Estudios de<br>sistemas eléctricos</h4>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-sm-4">
-                            <a href="" class="btn btn-blue font-weight-light size13 pt-2 pb-2">SOLICITAR INFORMACIÓN</a>
-                        </div>
-                        <div class="col-sm-12">
-                            <p class="mt-2">Realizamos estudios de sistemas eléctricos para electrificadoras, plantas industriales, mineras, centrales de generación y petroleras.</p>
-                            <p><span class="text-blue1 font-weight-bold">En GERS tenemos ingenieros altamente calificados</span> con quienes realizamos importantes estudios sistémicos en redes eléctricas nacionales e internacionales.</p>
-                            <p>Poseemos licencias de varios aplicativos software para análisis de sistemas de potencia.</p>
-                            <div class="row pt-4">
-                                <div class="col-sm-4 text-center">
-                                    <img class="align-self-center mb-3 mx-auto d-block" src="assets/images/servicios/medPNG.png" alt="Cálculo de Ajustes">
-                                    <p>Cálculo de ajustes y coordinación de protecciones eléctricas</p>
-                                </div>
-                                <div class="col-sm-4 text-center">
-                                    <img class="align-self-center mb-3 mx-auto d-block" src="assets/images/servicios/002-medidorPNG.png" alt="Energía Convencional">
-                                    <p>Estudios de conexión para proyectos con energías convencionales y no convencionales</p>
-                                </div>
-                                <div class="col-sm-4 text-center">
-                                    <img class="align-self-center mb-3 mx-auto d-block" src="assets/images/servicios/toPNG.png" alt="Sistemas eléctricos">
-                                    <p>Planeación de sistemas eléctricos</p>
+                            <div class="col-sm-5">
+                                <a href="" class="btn btn-blue font-weight-light size13 pt-2 pb-2">SOLICITAR INFORMACIÓN</a>
+                            </div>
+                            <div class="col-sm-12">
+                                <p class="mt-2">Realizamos estudios de sistemas eléctricos para electrificadoras, plantas industriales, mineras, centrales de generación y petroleras.</p>
+                                <p><span class="text-blue1 font-weight-bold">En GERS tenemos ingenieros altamente calificados</span> con quienes realizamos importantes estudios sistémicos en redes eléctricas nacionales e internacionales.</p>
+                                <p>Poseemos licencias de varios aplicativos software para análisis de sistemas de potencia.</p>
+                                <div class="row pt-4">
+                                    <div class="col-sm-4 text-center">
+                                        <img class="align-self-center mb-3 mx-auto d-block" src="assets/images/servicios/medPNG.png" alt="Cálculo de Ajustes">
+                                        <p>Cálculo de ajustes y coordinación de protecciones eléctricas</p>
+                                    </div>
+                                    <div class="col-sm-4 text-center">
+                                        <img class="align-self-center mb-3 mx-auto d-block" src="assets/images/servicios/002-medidorPNG.png" alt="Energía Convencional">
+                                        <p>Estudios de conexión para proyectos con energías convencionales y no convencionales</p>
+                                    </div>
+                                    <div class="col-sm-4 text-center">
+                                        <img class="align-self-center mb-3 mx-auto d-block" src="assets/images/servicios/toPNG.png" alt="Sistemas eléctricos">
+                                        <p>Planeación de sistemas eléctricos</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-sm-5 pr-0">
-                    <img src="assets/images/servicios/img-smart-grids.png" alt="servicio 2" class="img-fluid d-block">
+                    <div class="col-sm-5 pr-0">
+                        <!--<img src="assets/images/servicios/img-smart-grids.png" alt="servicio 2" class="img-fluid d-block">-->
+                    </div>
                 </div>
             </div>
         </div>
@@ -74,7 +76,7 @@
         <div class="bk-diseno" style="background-image: url(assets/images/servicios/background.jpg);">
             <div class="container mt-5">
                 <div class="row pt-5 pb-5">
-                    <div class="col">
+                    <div class="col-sm-6">
                         <ul class="text-white font-weight-light roboto">
                             <li>Arranque de motores</li>
                             <li>Demanda de energía y análisis de operación de industrias</li>
@@ -84,7 +86,7 @@
                             <li>Estudios de deslastre de carga</li>
                         </ul>
                     </div>
-                    <div class="col">
+                    <div class="col-sm-6">
                         <ul class="text-white font-weight-light roboto">
                             <li>Análisis de saturación de TC’s</li>
                             <li>Conexión de centrales generadoras</li>
