--- a/src/app/colombia/servicios/interventorias-asesorias/interventorias-asesorias.component.html
+++ b/src/app/colombia/servicios/interventorias-asesorias/interventorias-asesorias.component.html
@@ -1,9 +1,9 @@
 <section class="servicios interventorias-asesorias">
-    <div class="container-fluid">
+    <div class="container">
         <div class="row mt-3">
-            <div class="col-sm-7 mt-5 pl-100">
+            <div class="col-sm-7 mt-5">
                 <div class="row justify-content-center align-items-center">
-                    <div class="col-sm-8">
+                    <div class="col-sm-7">
                         <div class="media">
                             <img class="align-self-center mr-3" src="assets/images/servicios/interventoriaPNG.png" alt="Interventoria">
                             <div class="media-body">
@@ -11,7 +11,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-4">
+                    <div class="col-sm-5">
                         <a href="" class="btn btn-blue font-weight-light size13 pt-2 pb-2">SOLICITAR INFORMACIÓN</a>
                     </div>
                     <div class="col-sm-12">
@@ -21,18 +21,18 @@
                 </div>
             </div>
             <div class="col-sm-5 pr-0">
-                <img src="assets/images/servicios/img-interventoria.png" alt="Interventoria" class="img-fluid mt-5">
+                <img src="assets/images/servicios/img-interventoria.png" alt="Interventoria" class="img-fluid mt-5 mb-2">
             </div>
         </div>
     </div>
-    <div class="bg-blue1 pt-4 pb-4" style="margin-top:-40px">
+    <div class="bg-blue1 pt-4 pb-4 mtn-40">
         <div class="container">
             <div class="row">
-                <div class="col-sm-3 col-md-3 col-lg-3 text-center">
+                <div class="col-sm-3 col-md-3 col-lg-3 mt-4 mb-4 text-center">
                     <img src="assets/images/servicios/001-igualadaPNG.png" alt="control tecnico" class="img-fluid">
                     <p class="text-white m-0 size13">Control técnico y <br>administrativo de proyectos</p>
                 </div>
-                <div class="col-sm-3 col-md-3 col-lg-3 text-center">
+                <div class="col-sm-3 col-md-3 col-lg-3 mt-4 mb-4 text-center">
                     <img src="assets/images/servicios/002-consejoPNG.png" alt="interventoria" class="img-fluid">
                     <p class="text-white m-0 size13">Interventorías y <br>asesorías</p>
                 </div>
