--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -18,14 +18,14 @@
             <div class="col-xs-12 col-md-3 col-lg-3 contacto3">
                 <div class="info-Oficina">
                     <h4>Oficina Principal</h4>
-                    <p>Calle 3A # 65-118 <br> +57 2-489 7000 <br> gers@gers.com.co
+                    <p class="font-weight-light montserrat">Calle 3A # 65-118 <br> +57 2-489 7000 <br> gers@gers.com.co
                     </p>
                 </div>
                 <div class="sedeFooter">
-                    <a href="#">Nuestra sede</a>
+                    <a class="montserrat size14 font-weight-500" href="#">Nuestras sedes <i class="fas fa-long-arrow-alt-right"></i></a>
                 </div>
-                <div class="redesFooter">
-                    <p>Nuestras redes sociales</p>
+                <div class="redesFooter mb-2">
+                    <p class="montserrat size14 font-weight-500">Nuestras redes sociales</p>
                     <a href="#"><img src="assets/images/footer/facebook.png" alt="certificado 1"></a>
                     <a href="#"><img src="assets/images/footer/twitter.png" alt="certificado 2"></a>
                     <a href="#"><img src="assets/images/footer/linkedin.png" alt="certificado 3"></a>
@@ -50,8 +50,8 @@
     <div class="container">
         <div class="row pt-2 pb-2">
             <div class="col d-flex justify-content-between align-items-center">
-                <span class="text-white size13">Todos los derechos reservados © <span class="font-weight-light">GERS 2020</span></span>
-                <span class="text-white size13">Diseñado y desarrollado por: <a href="#" target="blank_" class="text-white size13">www.neruomedia.com.co</a> <img class="ml-2" src="assets/images/footer/logo-neuro.png" alt="" width="60"></span>
+                <span class="text-white size13">Todos los derechos reservados © <span class="font-weight-light">GERS 2021</span></span>
+                <span class="text-white size13">Diseñado y desarrollado por: <a href="https://www.neuromedia.com.co/" target="blank_" class="text-white size13">www.neuromedia.com.co</a> <img class="ml-2" src="assets/images/footer/logo-neuro.png" alt="" width="60"></span>
             </div>
         </div>
     </div>
