--- a/src/app/topbar-azul/topbar-azul.component.html
+++ b/src/app/topbar-azul/topbar-azul.component.html
@@ -1,8 +1,11 @@
 <!--Top Bar Color Azul-->
-<nav class="navbar navbar-expand-md topBarAzul">
+<nav class="navbar navbar-expand-md navbar-light topBarAzul">
 	<div class="container">
-		 <div class="collapse navbar-collapse" id="navbarCollapse">
-	        <div class="navbar-nav ml-auto">
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTopBar" aria-controls="navbarTopBar" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+		 <div class="collapse navbar-collapse w-100" id="navbarTopBar">
+	        <ul class="navbar-nav ml-auto">
 					<li class="nav-item dropdown">
 				        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 				          Nosotros
@@ -56,7 +59,7 @@
 	                            		<h3 class="textoPais">Colombia</h3>
 	                            	</div>
 	                                <ul>
-	                                    <li><a class="linkPais" href="#">Visitar sitio web</a>
+	                                    <li><a class="linkPais" href="#">Visitar sitio web <i class="fas fa-long-arrow-alt-right"></i></a>
 	                                    </li>
 	                                    <div class="recuadroCiudadTopHeader primeraCiudad">
 	                                    <li class="dropdown-header-ciudad">Cali</li>
@@ -74,7 +77,7 @@
 	                            		<h3 class="textoPais">Estados Unidos</h3>
 	                            	</div>
 	                                <ul>
-	                                    <li><a class="linkPais" href="#">Visitar sitio web</a>
+	                                    <li><a class="linkPais" href="#">Visitar sitio web <i class="fas fa-long-arrow-alt-right"></i></a>
 	                                    </li>
 	                                    <div class="recuadroCiudadTopHeader primeraCiudad">
 	                                    <li class="dropdown-header-ciudad">Weston</li>
@@ -92,7 +95,7 @@
 	                            		<h3 class="textoPais">México</h3>
 	                            	</div>
 	                                <ul>
-	                                    <li><a class="linkPais" href="#">Visitar sitio web</a>
+	                                    <li><a class="linkPais" href="#">Visitar sitio web <i class="fas fa-long-arrow-alt-right"></i></a>
 	                                    </li>
 	                                    <div class="recuadroCiudadTopHeader primeraCiudad">
 	                                    <li class="dropdown-header-ciudad">Ciudad de México</li>
@@ -106,7 +109,7 @@
 	                            		<h3 class="textoPais">Chile</h3>
 	                            	</div>
 	                                <ul>
-	                                    <li><a class="linkPais" href="#">Visitar sitio web</a>
+	                                    <li><a class="linkPais" href="#">Visitar sitio web <i class="fas fa-long-arrow-alt-right"></i></a>
 	                                    </li>
 	                                    <div class="recuadroCiudadTopHeader primeraCiudad">
 	                                    <li class="dropdown-header-ciudad">Santiago de Chile</li>
@@ -160,7 +163,7 @@
 		           			</div> <!-- dropdown-mega-menu.// -->
 				        </div>
 					</li>
-			</div>
+			</ul>
 		</div>
 	</div>
 </nav>
