--- a/src/app/colombia/contactenos/contactenos.component.html
+++ b/src/app/colombia/contactenos/contactenos.component.html
@@ -7,29 +7,29 @@
                         <span class="font-weight-bold">DOLOR SKISMET</span></h2>
                         <p class="size15 text-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc tincidunt mattis dui a pharetra. Aliquam dapibus pretium justo at vestibulum. Vestibulum porttitor sapien sed magna vulputate, non volutpat tortor cursus.</p>
                 </div>
-                <div class="col-md-6 mt-4">
+                <div class="col-md-6 mt-4 mb-4">
                     <div class="col-formulario pt-2 pl-5 pr-5 pb-2">
                         <h3 class="size19 text-blue2 font-weight-700 text-center pb-1">Contáctanos</h3>
                         <form class="contactenos pb-4">
                             <div class="form-row pt-2 pb-2">
                                 <label class="size14 letter-spacing0-4 line-height17 text-gray-dark font-weight-400 text-uppercase" for="nombre">Nombre completo</label>
-                                <input type="text" class="form-control" id="nombre" required>
+                                <input type="text" class="form-control text-blue1" id="nombre" required>
                             </div>
                             <div class="form-row pt-2 pb-2">
                                 <label class="size14 letter-spacing0-4 line-height17 text-gray-dark font-weight-400 text-uppercase" for="telefono">Teléfono</label>
-                                <input type="tel" class="form-control" id="telefono" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
+                                <input type="tel" class="form-control text-blue1" id="telefono" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
                             </div>
                             <div class="form-row pt-2 pb-2">
                                 <label class="size14 letter-spacing0-4 line-height17 text-gray-dark font-weight-400 text-uppercase" for="ciudad">Ciudad</label>
-                                <input type="text" class="form-control" id="ciudad" required>
+                                <input type="text" class="form-control text-blue1" id="ciudad" required>
                             </div>
                             <div class="form-row pt-2 pb-2">
                                 <label class="size14 letter-spacing0-4 line-height17 text-gray-dark font-weight-400 text-uppercase" for="empresa">Empresa</label>
-                                <input type="text" class="form-control" id="empresa" required>
+                                <input type="text" class="form-control text-blue1" id="empresa" required>
                             </div>
                             <div class="form-row pt-2 pb-2">
                                 <label class="size14 letter-spacing0-4 line-height17 text-gray-dark font-weight-400 text-uppercase" for="asunto">Asunto</label>
-                                <textarea class="form-control" id="asunto"></textarea>
+                                <textarea class="form-control text-blue1" id="asunto"></textarea>
                             </div>
                               <div class="form-check">
                                 <input type="checkbox" class="form-check-input" id="politicas" required>
