--- a/src/app/colombia/nosotros/pensamiento-corporativo/pensamiento-corporativo.component.html
+++ b/src/app/colombia/nosotros/pensamiento-corporativo/pensamiento-corporativo.component.html
@@ -21,7 +21,7 @@
                     </p>
                 </div>
                 <div class="col-sm-6">
-                    <img src="assets/images/servicios/diseno-ingeneria.png" alt="servicio 2" class="mt-1 img-fluid d-block position-absolute">
+                    <img src="assets/images/servicios/diseno-ingeneria.png" alt="servicio 2" class="mt-1 img-fluid d-block img-pensamiento-corporativo">
                 </div>
             </div>
         </div>
