--- a/src/app/colombia/representaciones/beckwith-electronic/beckwith-electronic.component.html
+++ b/src/app/colombia/representaciones/beckwith-electronic/beckwith-electronic.component.html
@@ -18,34 +18,36 @@
                     </div>
                 </div>
                 <div class="row">
-                    <p>
-                        Los clientes de Beckwith son electrificadoras, grandes empresas industriales, fabricantes de equipos originales y propietarios de fuentes alternativas de energía y fue fundada en 1967 para fabricar:
-                    </p>
-                    <ul class="line-height2-5">
-                        <li>Relés de protección (generadores, transformadores e interconexión)</li>
-                        <li>Controles digitales de tap bajo carga</li>
-                        <li>Controles digitales de reguladores (General Electric, Siemmens, Cooper y Howard)</li>
-                        <li>Reguladores de tensión</li>
-                        <li>Equipos para la sincronización de motores y transferencia de barras</li>
-                    </ul>
-                    <h4 class="text-blue1 size18 font-weight-bold mt-4">Implementación de la estrategia ivvm con productos beckwith</h4>
-                    <p>
-                        Hay aspectos teóricos y prácticos que relacionan las estrategias de gestión volt / Var (IVVM) con los objetivos de Smart Grid para la gestión de activos y confiabilidad en el sistema de distribución.
-                    </p>
-                    <p>Beckwith Electric ha sido y es líder en la implementación. de los componentes de la estrategia de Gestion de Volt/Var en redes de distribucion.</p>
+                    <div class="col-sm-12">
+                        <p>
+                            Los clientes de Beckwith son electrificadoras, grandes empresas industriales, fabricantes de equipos originales y propietarios de fuentes alternativas de energía y fue fundada en 1967 para fabricar:
+                        </p>
+                        <ul class="line-height2-5">
+                            <li>Relés de protección (generadores, transformadores e interconexión)</li>
+                            <li>Controles digitales de tap bajo carga</li>
+                            <li>Controles digitales de reguladores (General Electric, Siemmens, Cooper y Howard)</li>
+                            <li>Reguladores de tensión</li>
+                            <li>Equipos para la sincronización de motores y transferencia de barras</li>
+                        </ul>
+                        <h4 class="text-blue1 size18 font-weight-bold mt-4">Implementación de la estrategia ivvm con productos beckwith</h4>
+                        <p>
+                            Hay aspectos teóricos y prácticos que relacionan las estrategias de gestión volt / Var (IVVM) con los objetivos de Smart Grid para la gestión de activos y confiabilidad en el sistema de distribución.
+                        </p>
+                        <p>Beckwith Electric ha sido y es líder en la implementación. de los componentes de la estrategia de Gestion de Volt/Var en redes de distribucion.</p>
 
-                    <p class="font-weight-bold mt-3">Beneficios de la implementación de Integrated Volt/Var Management (IVVM).</p>
-                    <ul class="line-height2-5 w-100">
-                        <li>Reduccón de perdidas del sistema</li>
-                        <li>Mejoramiento de la estabilidad</li>
-                        <li>Incremento la capacidad de entrega de potencia (kW)</li>
-                        <li>Minimización de variaciones de tensión</li>
-                        <li>Mantenimiento de la entrega satisfactoria de tensión a los usuarios</li>
-                        <li>Costos de mentenimiento reducidos</li>
-                        <li>Gastos de capital reducidos/diferidos</li>
-                        <li>Reducción de costos de operación</li>
-                        <li>Perfiles de voltaje planos y Control de Conservación de Voltaje (CVC)</li>
-                    </ul>
+                        <p class="font-weight-bold mt-3">Beneficios de la implementación de Integrated Volt/Var Management (IVVM).</p>
+                        <ul class="line-height2-5 w-100">
+                            <li>Reduccón de perdidas del sistema</li>
+                            <li>Mejoramiento de la estabilidad</li>
+                            <li>Incremento la capacidad de entrega de potencia (kW)</li>
+                            <li>Minimización de variaciones de tensión</li>
+                            <li>Mantenimiento de la entrega satisfactoria de tensión a los usuarios</li>
+                            <li>Costos de mentenimiento reducidos</li>
+                            <li>Gastos de capital reducidos/diferidos</li>
+                            <li>Reducción de costos de operación</li>
+                            <li>Perfiles de voltaje planos y Control de Conservación de Voltaje (CVC)</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
