--- a/src/app/colombia/servicios/planeacion-proyectos/planeacion-proyectos.component.html
+++ b/src/app/colombia/servicios/planeacion-proyectos/planeacion-proyectos.component.html
@@ -1,7 +1,7 @@
 <section class="servicios planeacion-proyectos">
-    <div class="container-fluid">
+    <div class="container">
         <div class="row mt-3">
-            <div class="col-sm-6 mt-5 pl-100">
+            <div class="col-sm-6 mt-5">
                 <div class="row justify-content-center align-items-center">
                     <div class="col-sm-7">
                         <div class="media">
@@ -20,11 +20,11 @@
                 </div>
             </div>
             <div class="col-sm-6 pr-0">
-                <img src="assets/images/servicios/planeacion.png" alt="Planeacion" class="img-fluid mt-5">
+                <img src="assets/images/servicios/planeacion.png" alt="Planeacion" class="img-fluid mt-5 mb-2">
             </div>
         </div>
     </div>
-    <div class="bg-blue1 pt-4 pb-4" style="margin-top: -50px;">
+    <div class="bg-blue1 pt-4 pb-4 mt-bg-blue1">
         <div class="container">
             <div class="row">
                 <div class="col-sm-3 col-md-3 col-lg-4">
