--- a/src/app/colombia/servicios/pruebas-automatizacion-control/pruebas-automatizacion-control.component.html
+++ b/src/app/colombia/servicios/pruebas-automatizacion-control/pruebas-automatizacion-control.component.html
@@ -25,7 +25,7 @@
             </div>
         </div>
     </div>
-    <div class="bg-blue1 pt-4 pb-4" style="margin-top:-130px">
+    <div class="bg-blue1 pt-4 pb-4 mtn-130">
         <div class="container">
             <div class="row">
                 <div class="col-sm-4 col-md-4 col-lg-2 offset-lg-5 text-center">
