--- a/src/app/enviar-hoja/enviar-hoja.component.html
+++ b/src/app/enviar-hoja/enviar-hoja.component.html
@@ -2,31 +2,40 @@
 <!-- Contenedor Lateral Derecho Curriculum -->
 <div class="overviwe-curriculum"></div>
 <div class="curriculum-sidebar" id="curriculum-sidebar">
-    <div class="headerVertical-curriculum"><input type="button" class="cerrarModal-curriculum" value="×"></div>
+    <div class="headerVertical-curriculum bg-gray d-block">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-2">
+                    <input type="button" class="cerrarModal-curriculum" value="×">
+                </div>
+                <div class="col-sm-10">
+                    <h3 class="montserrat size23 text-blue2 font-weight-600 text-uppercase text-left mt-2">ENVIAR CURRICULUM</h3></div>
+                </div>
+            </div>
+        </div> 
     <div class="bodyVertical-curriculum">
         <div class="col-md-12">
             <div class="col-formulario-curriculum pt-2 pl-5 pr-5 pb-2">
-                <h3 class="size19 text-blue2 font-weight-700 text-center pb-1">ENVIAR CURRICULUM</h3>
                 <form class="contactenos pb-4">
                     <div class="form-row pt-2 pb-2">
-                        <label class="size14 letter-spacing0-4 line-height17 text-gray-dark font-weight-500" for="nombres">Nombres</label>
-                        <input type="text" class="form-control" id="nombres" required>
+                        <label class="size14 letter-spacing0-4 line-height17 text-gray2 font-weight-400" for="nombres">Nombres</label>
+                        <input type="text" class="form-control text-blue2 font-weight-600 shadow-inputs" id="nombres" required>
                     </div>
                     <div class="form-row pt-2 pb-2">
-                        <label class="size14 letter-spacing0-4 line-height17 text-gray-dark font-weight-500" for="apellidos">Apellidos</label>
-                        <input type="text" class="form-control" id="apellidos" required>
+                        <label class="size14 letter-spacing0-4 line-height17 text-gray2 font-weight-400" for="apellidos">Apellidos</label>
+                        <input type="text" class="form-control text-blue2 font-weight-600 shadow-inputs" id="apellidos" required>
                     </div>
                     <div class="form-row pt-2 pb-2">
-                        <label class="size14 letter-spacing0-4 line-height17 text-gray-dark font-weight-500" for="telefono">Teléfono</label>
-                        <input type="tel" class="form-control" id="telefono" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
+                        <label class="size14 letter-spacing0-4 line-height17 text-gray2 font-weight-400" for="telefono">Teléfono</label>
+                        <input type="tel" class="form-control text-blue2 font-weight-600 shadow-inputs" id="telefono" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
                     </div>
                     <div class="form-row pt-2 pb-2">
-                        <label class="size14 letter-spacing0-4 line-height17 text-gray-dark font-weight-500" for="correo">Correo Electrónico</label>
-                        <input type="email" class="form-control" id="correo" required>
+                        <label class="size14 letter-spacing0-4 line-height17 text-gray2 font-weight-400" for="correo">Correo Electrónico</label>
+                        <input type="email" class="form-control text-blue2 font-weight-600 shadow-inputs" id="correo" required>
                     </div>
                     <div class="form-row pt-2 pb-2">
-                        <label for="inputUbicacion">Ubicación</label>
-                        <select id="inputUbicacion" class="form-control">
+                        <label class="size14 letter-spacing0-4 line-height17 text-gray2 font-weight-400" for="inputUbicacion">Ubicación</label>
+                        <select id="inputUbicacion" class="form-control text-gray2">
                           <option selected>Seleccionar...</option>
                           <option>Colombia</option>
                           <option>Brasil</option>
@@ -36,8 +45,8 @@
                         </select>
                     </div>
                     <div class="form-row pt-2 pb-2">
-                        <label for="inputCatVacante">Categoría de la vacante</label>
-                        <select id="inputCatVacante" class="form-control">
+                        <label class="size14 letter-spacing0-4 line-height17 text-gray2 font-weight-400" for="inputCatVacante">Categoría de la vacante</label>
+                        <select id="inputCatVacante" class="form-control text-gray2">
                           <option selected>Seleccionar...</option>
                           <option>3127556767</option>
                           <option>0903846321</option>
@@ -49,25 +58,33 @@
                     <div class="form-row pt-2 pb-2">
                         <div class="invoiceBox">
                             <label for="file">
-                            <div class="boxFile" data-text="Seleccionar archivo">
+                            <div class="boxFile btn btn-blue" data-text="Seleccionar archivo">
                                 Adjuntar hoja de vida
                             </div>
                             </label>
                             <input id="file" multiple="" name="invoice[]" size="6000" type="file" accept="application/pdf,image/x-png,image/gif,image/jpeg,image/jpg,image/tiff">
-                            <label for="inputCatVacante">El archivo adjunto debe estar en el formato .PDF o .DOCX y no debe pesar más de 1.5 mb</label>
+                            <label class="size15 text-gray2 font-weight-300" for="inputCatVacante">El archivo adjunto debe estar en el formato <span class="text-black">.PDF o .DOCX</span> y no debe pesar más de <span class="text-black">1.5 mb</span></label>
                         </div>
                     </div>
                       <div class="form-check">
                         <input type="checkbox" class="form-check-input" id="politicas" required>
-                        <label class="form-check-label" for="politicas">Autoriza a GERS para el tratamiento de los datos consignados en este formulario con fines únicamente de envío de información de nuestros productos y/o servicios.</label>
+                        <label class="form-check-label size15 text-gray2 font-weight-300" for="politicas">Autoriza a GERS para el tratamiento de los datos consignados en este formulario con fines únicamente de envío de información de nuestros productos y/o servicios.</label>
                       </div>
                 </form>
             </div>
         </div>
     </div>
     <div class="footerVertical">
-        <button type="submit" class="btn btn-primary btn-blue mt-4 w-40 mx-auto d-block">Enviar Curriculum</button>
-        <button type="reset" class="btn">Cancelar</button>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6">
+                    <button type="submit" class="border-radius-0 btn btn-primary btn-dark-blue montserrat size17 letter-spacing-0-05 d-block w-100">Enviar Curriculum</button>
+                </div>
+                <div class="col-sm-6">
+                    <button type="reset" class="border-radius-0 btn d-block btn-dark-blue-outline montserrat size17 letter-spacing-0-05 w-100">Cancelar</button>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 <!--Aquí cierra Contenedor Lateral Izquierdo-->
