--- a/src/app/menu-vertical/menu-vertical.component.html
+++ b/src/app/menu-vertical/menu-vertical.component.html
@@ -55,7 +55,7 @@
         </div>
         <div class="corporacionVertical">
             <h3>Corporación</h3>
-            <ul class="menuCorporacion">
+            <ul class="menuCorporacion mb-0">
                 <li><a class="itemMenuCorporacionPadre con-submenu" href="#">Nosotros</a>
                     <ul class="menuCorporacionItemNosotros pb-2">
                         <li><a class="itemMenuCorporacionVertical" [routerLink]="['pensamiento-corporativo']">Pensamiento Corporativo</a></li>
@@ -64,12 +64,36 @@
                 </li>
                 <li><a class="itemMenuCorporacionPadre" [routerLink]="['acuerdos-internacionales']">Acuerdos Internacionales</a></li>
                 <li><a class="itemMenuCorporacionPadre" [routerLink]="['trabaje-con-nosotros']">Trabaje con Nosotros</a></li>
-                <li><a class="itemMenuCorporacionPadre con-submenu" href="#">Sedes</a>
-                    <ul class="menuCorporacionItemSedes">
-                        <li><a class="itemMenuCorporacionVertical" href="#">Pruebas, automatización y control</a></li>
-                        <li><a class="itemMenuCorporacionVertical" href="#">Diseño e ingeniería</a></li>
-                        <li><a class="itemMenuCorporacionVertical" href="#">Estudios de sistemas eléctricos</a></li>
-                        <li><a class="itemMenuCorporacionVertical" href="#">Servicios energéticos</a></li>
+                <li class="pb-3"><a class="itemMenuCorporacionPadre con-submenu" href="#">Sedes</a>
+                    <ul class="menuCorporacionItemSedes" style="list-style: none;padding-inline-start: 0;">
+                        <li class="mt-3 mb-3">
+                            <div class="pais">
+                                <img class="banderaPais" src="assets/images/banderas/colombia.png" alt="Colombia">
+                                <h3 class="textoPais text-black">Colombia</h3>
+                            </div>
+                            <a class="linkPais" href="#">Visitar sitio web <i class="fas fa-long-arrow-alt-right"></i></a>
+                        </li>
+                        <li class="mt-3 mb-3">
+                            <div class="pais">
+                                <img class="banderaPais" src="assets/images/banderas/usa.png" alt="Estados Unidos">
+                                <h3 class="textoPais text-black">Estados Unidos</h3>
+                            </div>
+                            <a class="linkPais" href="#">Visitar sitio web <i class="fas fa-long-arrow-alt-right"></i></a>
+                        </li>
+                        <li class="mt-3 mb-3">
+                            <div class="pais">
+                                <img class="banderaPais" src="assets/images/banderas/mexico.png" alt="México">
+                                <h3 class="textoPais text-black">México</h3>
+                            </div>
+                            <a class="linkPais" href="#">Visitar sitio web <i class="fas fa-long-arrow-alt-right"></i></a>
+                        </li>
+                        <li class="mt-3 mb-3">
+                            <div class="pais">
+                                <img class="banderaPais" src="assets/images/banderas/chile.png" alt="Chile">
+                                <h3 class="textoPais text-black">Chile</h3>
+                            </div>
+                            <a class="linkPais" href="#">Visitar sitio web <i class="fas fa-long-arrow-alt-right"></i></a>
+                        </li>
                     </ul>
                 </li>
             </ul>
